--- a/scss/clean-blog.css
+++ b/scss/clean-blog.css
@@ -613,18 +613,16 @@ section.navigate-portfolio div.container {
   position: relative; }
   .projectB-header .content {
     z-index: 100;
-    position: absolute;
+    position: relative;
     top: 20%;
     width: 100%; }
     .projectB-header .content .am-col-1, .projectB-header .content .am-col-2 {
-      border: 1px solid green;
       height: 100%; }
       .projectB-header .content .am-col-1 img, .projectB-header .content .am-col-2 img {
         float: right;
         width: 350px;
         height: auto; }
     .projectB-header .content .am-col-2 {
-      border: 1px solid red;
       height: 100%;
       position: relative; }
       .projectB-header .content .am-col-2 .img-text {
